--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
   <link href="main.css" rel="stylesheet">
   <body>
     <div id="container">
-      <canvas id="canvas" width="800" height="800">
-      </canvas>
+      <canvas id="canvas" width="800" height="800"></canvas>
     </div>
     <script src="main.js"></script>
   </body>
