Appearing animation; Promise

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <html>
-  <link href="main.css" rel="stylesheet">
   <body>
     <div id="container">
       <canvas id="canvas" width="800" height="800"></canvas>
     </div>
-    <script src="main.js"></script>
+    <script src="game.js"></script>
   </body>
 </html>
